--- a/index.html
+++ b/index.html
@@ -2,25 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/icon-x" sizes="48x48" href="/images/favicon.ico" />
+    <link rel="icon" type="image/icon-x" sizes="32x32" href="/images/favicon-32x32.ico" />
+    <link rel="icon" type="image/icon-x" sizes="16x16" href="/images/favicon-16x16.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-
-    <style>
-      /* Keeping text-wrap here due to not being compatible with postcss */
-      @layer reset {
-        :not([class]) {
-          h1&,
-          h2&,
-          h3&,
-          h4&,
-          h5&,
-          h6& {
-            text-wrap: balance;
-          }
-        }
-      }
-    </style>
+    <title>Shelly</title>
   </head>
   <body>
     <div id="root"></div>
