chore: [SHE-15] code improvements

--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/icon-x" sizes="48x48" href="/images/favicon.ico" />
-    <link rel="icon" type="image/icon-x" sizes="32x32" href="/images/favicon-32x32.ico" />
-    <link rel="icon" type="image/icon-x" sizes="16x16" href="/images/favicon-16x16.ico" />
+    <link
+      rel="icon"
+      type="image/icon-x"
+      sizes="48x48"
+      href="/images/favicon.ico"
+    />
+    <link
+      rel="icon"
+      type="image/icon-x"
+      sizes="32x32"
+      href="/images/favicon-32x32.ico"
+    />
+    <link
+      rel="icon"
+      type="image/icon-x"
+      sizes="16x16"
+      href="/images/favicon-16x16.ico"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shelly - Adopta a tu mejor amigo!</title>
   </head>
