chore: updated favicons and extensions

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     />
     <link
       rel="icon"
-      type="image/icon-x"
+      type="image/png"
       sizes="32x32"
-      href="/images/favicon-32x32.ico"
+      href="/images/favicon-32x32.png"
     />
     <link
       rel="icon"
-      type="image/icon-x"
+      type="image/png"
       sizes="16x16"
-      href="/images/favicon-16x16.ico"
+      href="/images/favicon-16x16.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shelly - Adopta a tu mejor amigo!</title>
