--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Shelly - Adopta a tu mejor amigo!</title>
   </head>
   <body>
-    <div id="root" class="h-full w-full"></div>
+    <div id="root" class="h-full w-full bg-amber-50"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
