feat: i18n first iteration

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Shelly - Adoptá a tu mejor amigo!</title>
   </head>
   <body>
-    <div id="root" class="h-full w-full bg-background"></div>
+    <div id="root" class="bg-background h-full w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
