--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="/images/favicon-16x16.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shelly - Adoptá a tu mejor amigo!</title>
+    <title>Shelly - Adopción y gestión responsable</title>
   </head>
   <body>
     <div id="root" class="bg-background h-full w-full"></div>
